refactor: streamline role addition logic in updateDefaultRoles method